# devpy

./: LICENSE  README.md  dev.py  pyproject.toml  run.py  styles.css
src/dexweb/: dexgen.py  dexweb.py  styles.css
